apps/overlays/gitea/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
spec:
  template:
    spec:
      containers:
        - name: gitea
          # Configures LDAP when the container starts
          # These hooks are run asychronously which means there's no guarantee for this to always run once Gitea is ready
          # But it does mean that we can add a sleep timer to the hook which will cover most cases
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - \"sleep 30\";
                  - /bin/sh
                  - -c
                  - \"touch /log/poststart.log\";
                  - /bin/sh
                  - -c
                  - \"gitea admin auth add-ldap --name lldap --host lldap.database-system --port 3890 --bind-dn cn=gitea,dc=starsystem,dc=dev --bind-password cupkar-xUhrit-hixme9 --user-search-base ou=people,dc=starsystem,cd=dev --user-filter (&(objectClass=person)(|(user_id=%[1]s)(mail=%[1]s))) --admin-filter (memberOf=cn=gitea_admin,ou=groups,dc=starsystem,dc=dev) --username-attribute user_id --first-name-attribute first_name --last-name-attribute last_name --email-attribute mail > /log/postst [...]
