apps/overlays/gitea/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`git.starsystem.dev`)
      kind: Rule
      services:
        - name: gitea
          port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitea-ssh
spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: gitea
          port: 2222
